2010-07-12  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        HTML tags should break out of foreign content
        https://bugs.webkit.org/show_bug.cgi?id=42106

        * html5lib/runner-expected-html5.txt:

2010-07-12  Zhenyao Mo  <zmo@google.com>

        Reviewed by Darin Fisher.

        Bring bufferData and clear to GLES2 compliant
        https://bugs.webkit.org/show_bug.cgi?id=41574

        * fast/canvas/webgl/invalidPassedParams-expected.txt: Add wrong param test cases for bufferData and clear.
        * fast/canvas/webgl/invalidPassedParams.html: Ditto.
        * fast/canvas/webgl/resources/desktop-gl-constants.js: Add ACCUM_BUFFER_BIT enum.

2010-07-12  Alexey Proskuryakov  <ap@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=13075
        XMLHttpRequest with failed authentication should set status to 401

        https://bugs.webkit.org/show_bug.cgi?id=6871
        <rdar://problem/3363403> 401 error page is never shown

        Enable xmlhttprequest/failed-auth.html on Windows. It now passes on my machine.

        * platform/win/Skipped: Also removed two userscript tests that don't exist (run-webkit-tests
        loudly complained about those).

2010-07-09  Darin Adler  <darin@apple.com>

        Reviewed by Geoffrey Garen.

        String to number coercion is not spec compliant
        https://bugs.webkit.org/show_bug.cgi?id=31349

        * fast/js/ToNumber-expected.txt: Updated to expect more tests to pass.
        * fast/js/parseFloat-expected.txt: Ditto.
        * fast/js/sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A2-expected.txt: Ditto.
        * fast/js/sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T1-expected.txt: Ditto.
        * fast/js/sputnik/Conformance/09_Type_Conversion/9.3_ToNumber/9.3.1_ToNumber_from_String/S9.3.1_A3_T2-expected.txt: Ditto.