@@ -1,0 +1,4 @@
+
+This tests to make sure that an iframe with custom scrollbars that is hidden does not crash the browser when unloaded. The test passes if it does not crash.
+
+PASSED
