@@ -1,3 +1,15 @@
+2010-07-12  Tony Chang  <tony@chromium.org>
+
+        Reviewed by David Hyatt.
+
+        crash in FrameView::detachCustomScrollbars
+        https://bugs.webkit.org/show_bug.cgi?id=41196
+
+        Test: scrollbars/hidden-iframe-scrollbar-crash.html
+
+        * page/FrameView.cpp:
+        (WebCore::FrameView::detachCustomScrollbars):
+
 2010-07-12  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
