@@ -1,3 +1,13 @@
+2010-07-12  Tony Chang  <tony@chromium.org>
+
+        Reviewed by David Hyatt.
+
+        crash in FrameView::detachCustomScrollbars
+        https://bugs.webkit.org/show_bug.cgi?id=41196
+
+        * scrollbars/hidden-iframe-scrollbar-crash-expected.txt: Added.
+        * scrollbars/hidden-iframe-scrollbar-crash.html: Added.
+
 2010-07-12  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
